--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <header>
         <h1><span style="color: white;">Diseño </span><span style="color: #00aaff;">Multimedia</span></h1>
         <nav>
-            <a href="./index.html">INICIO</a>
-            <a href="./nosotros.html">NOSOTROS</a>
-            <a href="./servicios.html">SERVICIOS</a>
-            <a href="./contacto.html">CONTACTO</a>
+            <a href="index.html">INICIO</a>
+            <a href="nosotros.html">NOSOTROS</a>
+            <a href="servicios.html">SERVICIOS</a>
+            <a href="contacto.html">CONTACTO</a>
         </nav>
     </header>
 
