--- a/servicios.html
+++ b/servicios.html
@@ -13,10 +13,10 @@
     <h1><span style="color: white;">Diseño </span><span style="color: #00aaff;">Multimedia</span></h1>
     <nav>
       <ul>
-        <a href="./index.html">INICIO</a>
-        <a href="./nosotros.html">NOSOTROS</a>
-        <a href="./servicios.html">SERVICIOS</a>
-        <a href="./contacto.html">CONTACTO</a>
+        <a href="index.html">INICIO</a>
+        <a href="nosotros.html">NOSOTROS</a>
+        <a href="servicios.html">SERVICIOS</a>
+        <a href="contacto.html">CONTACTO</a>
       </ul>
     </nav>
   </header>
