--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <h1><span style="color: white;">Diseño </span><span style="color: #00aaff;">Multimedia</span></h1>
         <nav>
             <a href="index.html">INICIO</a>
-            <a href="nosotros.html">NOSOTROS</a>
-            <a href="servicios.html">SERVICIOS</a>
-            <a href="contacto.html">CONTACTO</a>
+            <a href="pages/nosotros.html">NOSOTROS</a>
+            <a href="pages/servicios.html">SERVICIOS</a>
+            <a href="pages/contacto.html">CONTACTO</a>
         </nav>
     </header>
 
