--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -12,7 +12,7 @@
   <header>
     <h1><span style="color: white;">Diseño </span><span style="color: #00aaff;">Multimedia</span></h1>
     <nav>
-      <a href="index.html">INICIO</a>
+      <a href="../index.html">INICIO</a>
       <a href="nosotros.html">NOSOTROS</a>
       <a href="servicios.html">SERVICIOS</a>
       <a href="contacto.html">CONTACTO</a>
